--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ML Api</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-  <!-- <style>
+   <style>
     body{
       background-image: url("photos/1763120098532.jpg");
       background-size: cover;
@@ -200,8 +200,8 @@
     @keyframes fadeInFooter {
       to { opacity: 1; }
     }
-  </style> -->
-  <link rel="stylesheet" href="{{ url_for('static',filename='css/index.css')}}">
+  </style> 
+  <!-- <link rel="stylesheet" href="{{ url_for('static',filename='css/index.css')}}"> -->
 </head>
 
 <body>
@@ -239,7 +239,7 @@
   </div>
 
 </body>
-  <div class="footer-credit">
+  <!-- <div class="footer-credit">
     <span class="footer-icon">&#9889;</span>
-    This AI/ML model was created by <span class="footer-glow">Malik Adil Ferooz</span>.
-</html>
+    This AI/ML model was created by <span class="footer-glow">Malik Adil Ferooz</span>. -->
+</html> 
